# fxrank

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  README.md  index.html
.claude/: pr-review-journal.md
.github/workflows/: ci.yml
crates/fxrank-cli/: Cargo.toml  README.md
crates/fxrank-cli/src/: exclude.rs  main.rs
crates/fxrank-cli/tests/: cli.rs
crates/fxrank-core/: Cargo.toml
crates/fxrank-core/src/: confidence.rs  corpus.rs  effect.rs  fold.rs  frontend.rs  graph.rs  lib.rs  model.rs  record.rs  resolve.rs  score.rs
crates/fxrank-lang-python/: Cargo.toml
crates/fxrank-lang-python/src/: coverage.rs  functions.rs  imports.rs  lib.rs  module_map.rs  source.rs
crates/fxrank-lang-python/src/detect/: calls.rs  expr.rs  mod.rs  mutation.rs  refs.rs  risk.rs
crates/fxrank-lang-python/tests/: snapshots.rs
crates/fxrank-lang-python/tests/fixtures/: attribution.py  calls.py  coverage.py  dogfood.py  functions.py  genexp_await.py  lambda_positions.py  load_dotenv_negative.py  load_dotenv_positive.py  local_import.py  mixed_tests.py  mutation.py  risk.py  test_sample.py
crates/fxrank-lang-python/tests/snapshots/: snapshots__dogfood_report.snap
crates/fxrank-lang-rust/: Cargo.toml
crates/fxrank-lang-rust/src/: functions.rs  imports.rs  lib.rs  module_tree.rs
crates/fxrank-lang-rust/src/detect/: calls.rs  macros.rs  mod.rs  mutation.rs  refs.rs  risk.rs
crates/fxrank-lang-rust/tests/: rust_frontend.rs  snapshots.rs
crates/fxrank-lang-rust/tests/fixtures/: async.rs  calls.rs  functions.rs  macros.rs  mutation.rs  risk.rs  risk_gaps.rs  skip_tests.rs  statics.rs  worked_cases.rs
crates/fxrank-lang-rust/tests/snapshots/: snapshots__async_shell.snap  snapshots__fallible.snap  snapshots__inversion_pair.snap  snapshots__logging_soup_and_one_io.snap  snapshots__pure_total.snap  snapshots__risk_only.snap  snapshots__save_user.snap  snapshots__unsafe_cancel.snap
crates/fxrank-lang-shell/: Cargo.toml
crates/fxrank-lang-shell/src/: bindings.rs  functions.rs  lib.rs  walk.rs
crates/fxrank-lang-shell/src/detect/: calls.rs  mod.rs  mutation.rs  refs.rs  risk.rs
crates/fxrank-lang-shell/src/snapshots/: fxrank_lang_shell__tests__deploy_fixture_snapshot.snap  fxrank_lang_shell__tests__pipeline_fixture_snapshot.snap
crates/fxrank-lang-shell/tests/fixtures/: deploy.sh  functions.sh  pipeline.sh
crates/fxrank-lang-ts/: Cargo.toml
crates/fxrank-lang-ts/src/: coverage.rs  functions.rs  imports.rs  lib.rs  module_map.rs  ownership.rs  provenance.rs  react.rs  source.rs  tsconfig.rs
crates/fxrank-lang-ts/src/detect/: calls.rs  fnvalues.rs  mod.rs  mutation.rs  refs.rs  risk.rs
crates/fxrank-lang-ts/tests/: react.rs  snapshots.rs  ts_frontend.rs
crates/fxrank-lang-ts/tests/fixtures/: calls.ts  coverage.ts  functions.ts  mutation.ts  risk.ts  risk_with.js  worked.ts
crates/fxrank-lang-ts/tests/fixtures/react/: attribution.tsx  consumer_responsibility.tsx  containment.tsx  counter.tsx  effects.tsx  phase.tsx  uncontrolled_cell.tsx
crates/fxrank-lang-ts/tests/snapshots/: react__snapshot_react_fixtures@attribution.snap  react__snapshot_react_fixtures@consumer_responsibility.snap  react__snapshot_react_fixtures@containment.snap  react__snapshot_react_fixtures@counter.snap  react__snapshot_react_fixtures@effects.snap  react__snapshot_react_fixtures@phase.snap  react__snapshot_react_fixtures@uncontrolled_cell.snap  snapshots__worked_report.snap
crates/fxrank-lang-ts/tests/util/: mod.rs
docs/: 008-dogfood-deltas.md  README.md  adding-a-language-frontend.md  corpus-profile-guideline.md  cross-file-resolution-guideline.md  mutation-classification-guideline.md
docs/superpowers/plans/: 000-rust-scaffold.md  001-fxrank-rust-effect-scanner.md  002-skip-test-code.md  003-fxrank-typescript-frontend.md  004-corpus-hygiene-excludes.md  005-hotspot-id-column.md  006-fxrank-python-frontend.md  007-react-aware-effect-detectors.md  008-cross-language-mutation-alignment.md  009-cross-language-module-binding-global.md  010-corpus-profile.md  025-1-core-fold.md  025-2-rust-frontend-scan.md  025-2b-python-frontend-scan.md  025-2c-ts-frontend-scan.md  025-3a-real-contained.md  025-3b-roots.md  025-3c-first-third-party-classifier.md  025-3d-module-init-units.md  025-3e-1-core-precise-resolve.md  025-3e-2-rust-module-tree.md  025-3e-3-ts-emitter.md  025-3e-4-python-emitter.md  025-3e-5-ts-tsconfig-paths.md  025-3root-cli-explicit-roots.md  026-ts-cross-dialect-resolution.md  027-react-effect-scoring.md  028-scoring-table-rebaseline.md  029-dogfood-deltas.md  029-fxrank-shell-frontend.md
docs/superpowers/specs/: 000-rust-scaffold.md  001-fxrank-rust-effect-scanner.md  002-skip-test-code.md  003-fxrank-typescript-frontend.md  004-corpus-hygiene-excludes.md  005-hotspot-id-column.md  007-react-aware-effect-detectors.md  008-cross-language-mutation-alignment.md  025-3e-precise-module-resolution.md  025-cross-file-resolution-and-propagation.md  026-ts-cross-dialect-resolution.md  027-react-effect-scoring.md  028-scoring-table-rebaseline.md  029-fxrank-shell-frontend.md
plans/: 000-rust-scaffold.md  001-fxrank-rust-effect-scanner.md  002-skip-test-code.md  003-fxrank-typescript-frontend.md  004-corpus-hygiene-excludes.md  005-hotspot-id-column.md  006-fxrank-python-frontend.md  007-react-aware-effect-detectors.md  008-cross-language-mutation-alignment.md
specs/: 000-rust-scaffold.md  001-fxrank-rust-effect-scanner.md  002-skip-test-code.md  003-fxrank-typescript-frontend.md  004-corpus-hygiene-excludes.md  005-hotspot-id-column.md  006-fxrank-python-frontend.md  007-react-aware-effect-detectors.md  008-cross-language-mutation-alignment.md
src/: main.rs
