[package]
name = "fxrank"
edition.workspace = true
version.workspace = true
[[bin]]
name = "fxrank"
path = "src/main.rs"
[dependencies]
fxrank-core = { path = "../fxrank-core" }
fxrank-lang-rust = { path = "../fxrank-lang-rust", optional = true }
fxrank-lang-ts = { path = "../fxrank-lang-ts", optional = true }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
globset = "0.4"
[features]
default = ["rust", "ts"]
rust = ["dep:fxrank-lang-rust"]
ts = ["dep:fxrank-lang-ts"]
[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
[lints]
workspace = true
