[package]
name = "fxrank-core"
description = "Language-neutral effect-cost scoring model for FxRank (depends on no parser)."
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
globset = "0.4"
[lints]
workspace = true
