[package]
name = "fxrank-lang-rust"
edition.workspace = true
version.workspace = true
[dependencies]
fxrank-core = { path = "../fxrank-core" }
syn = { version = "2", features = ["full", "visit", "extra-traits"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
[dev-dependencies]
insta = { version = "1", features = ["json"] }
serde_json = "1"

[lints]
workspace = true
