[package]
name = "fxrank-lang-rust"
description = "Rust (syn-based) frontend for FxRank's effect-cost profiler."
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
[dependencies]
fxrank-core = { path = "../fxrank-core", version = "0.1.1" }
syn = { version = "2", features = ["full", "visit", "extra-traits"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
[dev-dependencies]
insta = { version = "1", features = ["json"] }
serde_json = "1"

[lints]
workspace = true
