[package]
name = "fxrank-lang-shell"
description = "Shell (Bash/POSIX) frontend for fxrank"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
fxrank-core = { path = "../fxrank-core", version = "0.4.1" }
brush-parser = "=0.4.0"   # exact pin — the plan's AST-shape claims are verified against 0.4.0

[dev-dependencies]
insta = { version = "1", features = ["json"] }
serde_json = "1"   # parity with sibling crates; used if a JSON-snapshot test is added

[lints]
workspace = true
