[package]
name = "fxrank-lang-ts"
edition.workspace = true
version.workspace = true

[dependencies]
fxrank-core = { path = "../fxrank-core" }
swc_common = "23.0.2"
swc_ecma_ast = "25.0.0"
swc_ecma_parser = "41.1.1"
swc_ecma_visit = "25.0.0"

[dev-dependencies]
insta = { version = "1", features = ["json"] }
serde_json = "1"

[lints]
workspace = true
