[package]
name = "fxrank-lang-ts"
description = "TypeScript/JavaScript (swc-based) frontend for FxRank's effect-cost profiler."
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
fxrank-core = { path = "../fxrank-core", version = "0.3.0" }
swc_common = "23.0.2"
swc_ecma_ast = "25.0.0"
swc_ecma_parser = "41.1.1"
swc_ecma_visit = "25.0.0"

[dev-dependencies]
insta = { version = "1", features = ["json"] }
serde_json = "1"

[lints]
workspace = true
